--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
         h1 {
             font-size: 36px;
             background: linear-gradient(45deg, #00CEC9, #0984E3);
+             background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
 
